--- a/translations/kangyur/placeholders/059-013_toh170-the_sutra_of_the_questions_of_the_brahmani_srimati.xml
+++ b/translations/kangyur/placeholders/059-013_toh170-the_sutra_of_the_questions_of_the_brahmani_srimati.xml
@@ -16,10 +16,10 @@
                 <editor role="associateEditor" ref="eft:person-422">George FitzHerbert</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.8 <date>2020</date>
+                <edition>v 0.0.9 <date>2020</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.g">
+            <publicationStmt status="2.f">
                 <idno xml:id="UT22084-059-013"/>
                 <date/>
             </publicationStmt>
@@ -38,7 +38,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-30T12:38:16.186Z" user="admin">30/01/2023 12:38:16</note>
+                <note type="lastUpdated" date-time="2023-02-21T10:47:47.796Z" user="admin">21/02/2023 10:47:47</note>
                 <note type="updated" update="translation-status" value="4" date-time="2020-10-27T13:18:41.447Z" user="line-tofte">4</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-27T13:18:41.447Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="3" date-time="2020-11-12T11:04:10.71Z" user="line-tofte">3</note>
@@ -51,6 +51,8 @@
                 <note type="updated" update="translation-status" value="2.g" date-time="2023-01-30T12:37:43.618Z" user="line-tofte">2.g</note>
                 <note type="updated" update="text-version" value="0.0.7" date-time="2023-01-30T12:37:43.618Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.8" date-time="2023-01-30T12:38:10.534Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.f" date-time="2023-02-21T10:47:41.974Z" user="line-tofte">2.f</note>
+                <note type="updated" update="text-version" value="0.0.9" date-time="2023-02-21T10:47:41.974Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
