--- a/translations/kangyur/placeholders/034-029_toh41-the_sutra_of_the_sun.xml
+++ b/translations/kangyur/placeholders/034-029_toh41-the_sutra_of_the_sun.xml
@@ -14,10 +14,10 @@
                 <editor role="projectEditor" ref="eft:person-250">Rory Lindsay</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.7 <date>2020</date>
+                <edition>v 0.0.8 <date>2020</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.g">
+            <publicationStmt status="2.f">
                 <idno xml:id="UT22084-034-029"/>
                 <date/>
             </publicationStmt>
@@ -33,7 +33,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-30T12:38:56.558Z" user="admin">30/01/2023 12:38:56</note>
+                <note type="lastUpdated" date-time="2023-02-21T14:41:10.873Z" user="admin">21/02/2023 14:41:10</note>
                 <note type="updated" update="translation-status" value="4" date-time="2020-12-08T12:55:39.006Z" user="line-tofte">4</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-12-08T12:55:39.006Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="3" date-time="2021-03-10T08:29:46.538Z" user="line-tofte">3</note>
@@ -45,6 +45,8 @@
                 <note type="updated" update="translation-status" value="2.g" date-time="2023-01-30T11:21:07.263Z" user="line-tofte">2.g</note>
                 <note type="updated" update="text-version" value="0.0.6" date-time="2023-01-30T11:21:07.263Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.7" date-time="2023-01-30T12:38:50.932Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.f" date-time="2023-02-21T14:41:05.084Z" user="line-tofte">2.f</note>
+                <note type="updated" update="text-version" value="0.0.8" date-time="2023-02-21T14:41:05.084Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
