--- a/translations/kangyur/translations/065-004_toh241-the_sutra_of_the_wheel_of_samadhi.xml
+++ b/translations/kangyur/translations/065-004_toh241-the_sutra_of_the_wheel_of_samadhi.xml
@@ -32,7 +32,7 @@
                                 <editor role="finalReviewer" ref="eft:person-74">Ryan Damron</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.1.4 <date>2023</date>
+                <edition>v 1.1.5 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="1.a">
@@ -72,7 +72,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2023-02-28T22:54:36.409Z" user="admin">28/02/2023 22:54:36</note>
+                                <note type="lastUpdated" date-time="2023-03-01T11:08:39.165Z" user="admin">01/03/2023 11:08:39</note>
                                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-10-09T06:16:46.43Z" user="andreas">v
                                         0.1.0</note>
                                 <note type="updated" update="translation-status" value="2.h" date-time="2022-03-14T11:00:47.488Z" user="line-tofte">2.h</note>
@@ -123,6 +123,7 @@
                             <note type="updated" update="text-version" value="1.1.2" date-time="2023-02-28T13:38:10.126Z" user="john">Further minor edits.</note>
                             <note type="updated" update="text-version" value="1.1.3" date-time="2023-02-28T16:18:46.614Z" user="john">Further minor edits and added bibliography entry.</note>
                             <note type="updated" update="text-version" value="1.1.4" date-time="2023-02-28T22:54:33.411Z" user="john">Further small edit.</note>
+                            <note type="updated" update="text-version" value="1.1.5" date-time="2023-03-01T11:08:36.183Z" user="andre">Glossary matching revised - Activated in CG</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -566,14 +567,13 @@
                                                 </gloss>
                     </item>
                                         <item>
-                        <gloss type="term" xml:id="UT22084-065-004-79">
-                                                  <term>meditative concentration</term>
-                                                  <term xml:lang="Bo-Ltn">ting nge ’dzin </term>
-                                                  <term xml:lang="bo">ཏིང་ངེ་འཛིན།</term>
-                                                  <term xml:lang="Sa-Ltn">samādhi</term>
-                                                  <term type="definition">A state of deep
-                                                  concentration or absorption.</term>
-                                                </gloss>
+                        <gloss xml:id="UT22084-065-004-79" type="term" mode="match">
+                            <term>meditative concentration</term>
+                            <term xml:lang="Bo-Ltn">ting nge ’dzin</term>
+                            <term xml:lang="bo">ཏིང་ངེ་འཛིན།</term>
+                            <term xml:lang="Sa-Ltn">samādhi</term>
+                            <term type="definition">A state of deep concentration or absorption.</term>
+                        </gloss>
                     </item>
                                         <item>
                         <gloss type="term" xml:id="UT22084-065-004-80">
@@ -774,27 +774,22 @@
                         </gloss>
                     </item>
                                         <item>
-                        <gloss type="person" xml:id="UT22084-065-004-103">
-                                                  <term>Mañjuśrī </term>
-                                                  <term xml:lang="Bo-Ltn">’jam dpal </term>
-                                                  <term xml:lang="bo">འཇམ་དཔལ།</term>
-                                                  <term xml:lang="Sa-Ltn">Mañjuśrī </term>
-                                                  <term type="definition">A great bodhisattva, one
-                                                  of the eight “close sons” of the Buddha;
-                                                  considered the embodiment of wisdom.</term>
-                                                </gloss>
+                        <gloss xml:id="UT22084-065-004-103" type="person" mode="match">
+                            <term>Mañjuśrī</term>
+                            <term xml:lang="Bo-Ltn">’jam dpal</term>
+                            <term xml:lang="bo">འཇམ་དཔལ།</term>
+                            <term xml:lang="Sa-Ltn">Mañjuśrī</term>
+                            <term type="definition">A great bodhisattva, one of the eight “close sons” of the Buddha; considered the embodiment of wisdom.</term>
+                        </gloss>
                     </item>
                                         <item>
-                        <gloss type="person" xml:id="UT22084-065-004-104">
-                                                  <term>Śāriputra</term>
-                                                  <term xml:lang="Bo-Ltn">shA ri’i bu </term>
-                                                  <term xml:lang="bo">ཤཱ་རིའི་བུ།</term>
-                                                  <term xml:lang="Sa-Ltn">Śāriputra</term>
-                                                  <term type="definition">Along with
-                                                  Mahāmaudgalyāyana, one of the Buddha Śākyamuni’s
-                                                  two main disciples, known as the foremost in terms
-                                                  of insight.</term>
-                                                </gloss>
+                        <gloss xml:id="UT22084-065-004-104" type="person" mode="match">
+                            <term>Śāriputra</term>
+                            <term xml:lang="Bo-Ltn">shA ri’i bu</term>
+                            <term xml:lang="bo">ཤཱ་རིའི་བུ།</term>
+                            <term xml:lang="Sa-Ltn">Śāriputra</term>
+                            <term type="definition">Along with Mahāmaudgalyāyana, one of the Buddha Śākyamuni’s two main disciples, known as the foremost in terms of insight.</term>
+                        </gloss>
                     </item>
                                         <item>
                         <gloss type="place" xml:id="UT22084-065-004-106">
@@ -811,14 +806,13 @@
                                                 </gloss>
                     </item>
                                         <item>
-                        <gloss type="place" xml:id="UT22084-065-004-107">
-                                                  <term>Rājagṛha </term>
-                                                  <term xml:lang="Bo-Ltn">rgyal po’i khab </term>
-                                                  <term xml:lang="bo">རྒྱལ་པོའི་ཁབ།</term>
-                                                  <term xml:lang="Sa-Ltn">Rājagṛha </term>
-                                                  <term type="definition">The capital of the ancient
-                                                  kingdom of Magadha.</term>
-                                                </gloss>
+                        <gloss xml:id="UT22084-065-004-107" type="place" mode="match">
+                            <term>Rājagṛha</term>
+                            <term xml:lang="Bo-Ltn">rgyal po’i khab</term>
+                            <term xml:lang="bo">རྒྱལ་པོའི་ཁབ།</term>
+                            <term xml:lang="Sa-Ltn">Rājagṛha</term>
+                            <term type="definition">The capital of the ancient kingdom of Magadha.</term>
+                        </gloss>
                     </item>
                                 </list>
                         </div>
