--- a/translations/kangyur/placeholders/015-002_toh8-2-chapters_14_to_72_the_perfection_of_wisdom_in_one_hundred_thousand_lines.xml
+++ b/translations/kangyur/placeholders/015-002_toh8-2-chapters_14_to_72_the_perfection_of_wisdom_in_one_hundred_thousand_lines.xml
@@ -15,7 +15,7 @@
                 <consultant role="advisor" ref="eft:person-420">Losang Gyaltsen</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2021</date>
+                <edition>v 0.0.9 <date>2021</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -28,21 +28,21 @@
                     <biblScope/>
                     <location work="UT4CZ5369" count-pages="6483">
                         <volume number="17" start-page="565" end-page="761"/>
-                        <volume number="22" start-page="2" end-page="767"/>
-                        <volume number="23" start-page="2" end-page="773"/>
-                        <volume number="24" start-page="2" end-page="821"/>
-                        <volume number="25" start-page="2" end-page="789"/>
                         <volume number="18" start-page="2" end-page="789"/>
                         <volume number="19" start-page="2" end-page="763"/>
                         <volume number="20" start-page="2" end-page="795"/>
                         <volume number="21" start-page="2" end-page="797"/>
+                        <volume number="22" start-page="2" end-page="767"/>
+                        <volume number="23" start-page="2" end-page="773"/>
+                        <volume number="24" start-page="2" end-page="821"/>
+                        <volume number="25" start-page="2" end-page="789"/>
                     </location>
                     <idno parent-id="O1JC114941JC14665" work="http://read.84000.co/sections"/>
                     <idno source-id="toh8-2" work="http://read.84000.co/translations"/>
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-03-01T10:59:04.74Z" user="admin">01/03/2023 10:59:04</note>
+                <note type="lastUpdated" date-time="2023-03-01T11:21:27.756Z" user="admin">01/03/2023 11:21:27</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-02-23T18:55:36.252Z" user="john">Split from original single Toh 8 file</note>
                 <note type="updated" update="text-version" value="0.0.3" date-time="2022-06-16T16:14:40.597Z" user="cabie-sim">Auto (update-titles)</note>
                 <note type="updated" update="translation-status" value="3" date-time="2022-08-04T09:29:52.243Z" user="line-tofte">3</note>
@@ -51,6 +51,7 @@
                 <note type="updated" update="text-version" value="0.0.6" date-time="2022-08-04T09:32:49.4Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.0.7" date-time="2022-08-04T09:43:08.536Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.0.8" date-time="2023-03-01T10:59:00.164Z" user="john">Auto (update-locations)</note>
+                <note type="updated" update="text-version" value="0.0.9" date-time="2023-03-01T11:21:23.415Z" user="john">Auto (update-locations)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
