--- a/translations/kangyur/translations/051-006_toh118-the_infinite_jewels.xml
+++ b/translations/kangyur/translations/051-006_toh118-the_infinite_jewels.xml
@@ -14,7 +14,7 @@
                 <title type="longTitle" xml:lang="bo">འཕགས་པ་རིན་པོ་ཆེའི་མཐའ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">ratnakoṭisūtra</title>
                 <title type="otherTitle" xml:lang="zh">《寶邊經》（大正藏：《入法界體性經》；《佛說寶積三昧文殊師利菩薩問法身經》）</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">rin po che’i mtha’i mdo/</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">rin po che’i mtha’i mdo</title>
                 <author role="translatorMain" ref="eft:team-9">Translated by the Dharmachakra Translation
                     Committee<lb/>under the patronage and supervision of 84000: Translating the Words of the
                     Buddha</author>
@@ -30,7 +30,7 @@
                 <editor role="finalReviewer" ref="eft:person-289">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.2 <date>2022</date>
+                <edition>v 1.0.5 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -63,7 +63,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-26T04:32:47.15Z" user="admin">26/07/2022 04:32:47</note>
+                <note type="lastUpdated" date-time="2023-03-01T12:10:32.916Z" user="admin">01/03/2023 12:10:32</note>
                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-11-12T08:26:31.233Z" user="andreas">v 0.1.0</note>
                 <note type="updated" update="translation-status" value="2.g" date-time="2019-11-12T08:26:31.233Z" user="andreas">2.g</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2020-01-27T13:00:21.604Z" user="mike">2.h</note>
@@ -94,6 +94,9 @@
                 <note type="updated" update="text-version" value="1.0.0" date-time="2022-03-01T09:41:35.822Z" user="andre">First published version</note>
                 <note type="updated" update="text-version" value="1.0.1" date-time="2022-03-23T10:59:35.636Z" user="laura">Minor glossary issue from Wiesiek</note>
                 <note type="updated" update="text-version" value="1.0.2" date-time="2022-07-26T04:32:39.404Z" user="cabie-sim">Auto (update-titles)</note>
+                <note type="updated" update="text-version" value="1.0.3" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>
+                <note type="updated" update="text-version" value="1.0.4" date-time="2023-01-18T14:48:43.396Z" user="celso">Auto (removing-tid-from-back-list-items)</note>
+                <note type="updated" update="text-version" value="1.0.5" date-time="2023-03-01T12:10:29.86Z" user="martina-cotter">updated pending links.</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -190,7 +193,9 @@
                         in the facets of the jewel). Secondly, the <title xml:lang="Sa-Ltn">Mahāvyutpatti</title>, the
                         seminal list of Sanskrit–Tibetan terminological equivalents, renders <foreign xml:lang="Sa-Ltn" type="quote">ratnakoṭir nāma samādhiḥ</foreign> as <foreign xml:lang="Bo-Ltn" type="quote">rin chen mtha’ yas zhes bya ba’i ting nge ’dzin</foreign>, “the meditative absorption
                         called <distinct>infinite jewels</distinct>.”<note place="end" xml:id="UT22084-051-006-12">
-                            Interestingly, Saerji (2011) has argued that this sūtra and the shorter <title xml:lang="Sa-Ltn">Samādhi­cakrasūtra</title> (Toh 241) <ref rend="pending" target="http://read.84000.co/translation/toh241"/> are
+                            Interestingly, Saerji (2011) has argued that this sūtra and the shorter <title xml:lang="Sa-Ltn">
+                                <ptr target="https://read.84000.co/translation/toh241.html">Samādhi­cakrasūtra</ptr>
+                            </title> (Toh 241) are
                             related, as the <title xml:lang="Sa-Ltn">Samādhi­cakrasūtra</title> seems to be a summary of
                                 <title xml:lang="en">Infinite Jewels</title>, perhaps meant to facilitate
                             memorization.</note>
@@ -708,9 +713,10 @@
                         Publishing House), 2006–9, vol. 51, 764–83.</bibl>
                     <bibl xml:id="UT22084-051-006-164">
                         <title xml:lang="Bo-Ltn">ting nge ’dzin gyi ’khor lo’i
-                        mdo</title> (<title xml:lang="Sa-Ltn">Samādhi­cakrasūtra</title>). Toh 241, Degé Kangyur,
-                        vol. 65 (mdo sde, zha), folios 302.a–303.a. <ref rend="pending" target="http://read.84000.co/translation/toh241"/>
-                    </bibl>
+                        mdo</title> (<title xml:lang="Sa-Ltn">
+                            <ptr target="https://read.84000.co/translation/toh241.html">Samādhi­cakrasūtra</ptr>
+                        </title>). Toh 241, Degé Kangyur,
+                        vol. 65 (mdo sde, zha), folios 302.a–303.a.</bibl>
                     <bibl xml:id="UT22084-051-006-165">Ratnākaraśānti. <title xml:lang="Bo-Ltn">dpal dgyes pa’i rdo
                         rje’i dka’ ’grel mu tig phreng ba</title> (<title xml:lang="Sa-Ltn">Śrīhevajra­pañjikānāma­muktikāvalī</title>). Toh 1189, Degé Tengyur vol. 3 (rgyud, ga),
                         folios 221.a–297.a.<ref rend="pending" target="http://read.84000.co/translation/toh1189"/>
