--- a/translations/kangyur/placeholders/101-114_toh1059-mantra_for_enchanting_medicines_extracted_from_destroyer_of_the_great_trichiliocosm.xml
+++ b/translations/kangyur/placeholders/101-114_toh1059-mantra_for_enchanting_medicines_extracted_from_destroyer_of_the_great_trichiliocosm.xml
@@ -9,12 +9,13 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">stong chen mo nas phyung ba sman la sngags kyis gdab pa/</title>
                 <author role="translatorMain" ref="eft:team-55"/>
                 <author role="translatorEng" ref="eft:person-61">Catherine Dalton</author>
+                <editor role="projectEditor" ref="eft:person-50">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2022</date>
+                <edition>v 0.0.6 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.g">
+            <publicationStmt status="2.f">
                 <idno xml:id="UT22084-101-114"/>
                 <date/>
             </publicationStmt>
@@ -30,7 +31,17 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-03-23T14:34:28.267Z" user="admin">23/03/2023 14:34:28</note>    <note type="updated" update="translation-status" value="3" date-time="2022-04-13T12:59:27.641Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-04-13T12:59:27.641Z" user="line-tofte">0.0.1</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-04-13T12:59:51.087Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-04-25T12:52:26.211Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.3" date-time="2022-04-25T12:52:26.211Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2023-03-23T14:34:24.051Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.0.4" date-time="2023-03-23T14:34:24.051Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2023-04-12T13:06:16.458Z" user="admin">12/04/2023 13:06:16</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-04-13T12:59:27.641Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2022-04-13T12:59:27.641Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-04-13T12:59:51.087Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2022-04-25T12:52:26.211Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2022-04-25T12:52:26.211Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2023-03-23T14:34:24.051Z" user="line-tofte">2.g</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2023-03-23T14:34:24.051Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2023-03-23T14:34:56.177Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.f" date-time="2023-04-12T13:06:12.19Z" user="line-tofte">2.f</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2023-04-12T13:06:12.19Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
